examples/test/testpolicy3852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3852
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key7: value0
      key15: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value5
          key8: value9
          key31: value48
      podSelector:
        matchLabels:
          key33: value20
          key46: value31
          key49: value46
